--- a/index.html
+++ b/index.html
@@ -12,15 +12,22 @@
         <title>Project 1</title>
     </head></head>
 <body>
-    <a href="#"><div id="box3">GMH</div></a>
+
+<div id="buttonleft">
+        <a href="https://gharney23.github.io/Home-Page/"><img id="buttonleft" src="leftarrow.png"></a></div>
+<div id="buttonright">
+        <a href="https://gharney23.github.io/Portfolio-Project-2/"><img id="buttonright" src="rightarrow.png"></a></div>
+
+
+    <a href="https://gharney23.github.io/Home-Page/"><div id="box3">GMH</div></a>
     <div class="header"><h1>Aerial ABCs</h1></div>
     <div class="links">
-    <a href="https://www.moma.org/"><h3>Home</h3></a>
-    <a href="https://www.moma.org/"><h3>Evergreen</h3></a>
-    <a href="https://www.moma.org/"><h3>Black and White
+    <a href="https://gharney23.github.io/Home-Page/"><h3>Home</h3></a>
+    <a href="https://gharney23.github.io/Portfolio-Project-2/"><h3>Evergreen</h3></a>
+    <a href="https://gharney23.github.io/Portfolio-Project-3/"><h3>Black and White
     </a>
     <a href="https://gharney23.github.io/Maxim1/"><h3>Maxims</h3></a>
-    <a href="https://www.moma.org/"><h3>About Me</h3></a>
+    <a href="https://gharney23.github.io/Portfolio-About-Me/"><h3>About Me</h3></a>
 
     <div class="container2">
     <img src="A.jpg" alt="">
